--- a/StoryPrompt/Base.lproj/Main.storyboard
+++ b/StoryPrompt/Base.lproj/Main.storyboard
@@ -79,6 +79,9 @@
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="7" minValue="5" maxValue="10" minimumValueImage="5.circle" catalog="system" maximumValueImage="10.circle" translatesAutoresizingMaskIntoConstraints="NO" id="hss-FT-OaH">
                                         <rect key="frame" x="-2" y="210.33333333333331" width="354" height="31"/>
                                         <color key="tintColor" systemColor="labelColor"/>
+                                        <connections>
+                                            <action selector="changeNumber:" destination="BYZ-38-t0r" eventType="valueChanged" id="zir-tl-1xq"/>
+                                        </connections>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Picture" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgz-nQ-HYk">
                                         <rect key="frame" x="0.0" y="262.33333333333331" width="350" height="20.333333333333314"/>
@@ -98,6 +101,9 @@
                                             <segment title="Scifi"/>
                                             <segment title="Horror"/>
                                         </segments>
+                                        <connections>
+                                            <action selector="changeStoryType:" destination="BYZ-38-t0r" eventType="valueChanged" id="lHa-F1-I2g"/>
+                                        </connections>
                                     </segmentedControl>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LdV-Im-vVR">
                                         <rect key="frame" x="0.0" y="400" width="350" height="30"/>
@@ -115,6 +121,13 @@
                             <constraint firstItem="w7C-Qg-cyz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="yWG-MJ-pDM"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="adjectiveTextField" destination="IuU-ND-sHT" id="mJ2-eE-5Dz"/>
+                        <outlet property="nounTextField" destination="B9h-JF-5x8" id="kvY-AR-uJm"/>
+                        <outlet property="numberLabel" destination="Uk4-ns-h1x" id="hQf-mb-3fb"/>
+                        <outlet property="numberSlider" destination="hss-FT-OaH" id="f7U-IG-kRy"/>
+                        <outlet property="verbTextField" destination="z46-4b-bFn" id="4Nc-YL-zcL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
